# workshopsToLinksConverter

./: CMakeLists.txt  README.md  main.cpp
